Thoth History
================================================================================

Version 0.1.3 (?)
  * Blog posts are now marked up using the hAtom microformat.

Version 0.1.2 (2008-03-22)
  * Add MinifyController to minify JavaScript and CSS on the fly.
  * Bump Ramaze dependency to 0.3.9.1 to chase some important bug fixes.

Version 0.1.1 (2008-03-17)
  * First release.